[metadata]
name = pyodb
version = 1.1.0
author  = Idir DEHMOUS
author_email = idehmous@meteo.be 
description  = "C API interface to access ECMWF ODB1 databases using python" 
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = ECMA ,CCMA , ODB , python 
license = Apache-Licence-2.0
classifiers = [
  "Development Status   :: 1 - Beta release",
  "Intended Audience    :: Developers ,researchers",
  "Topic                :: Software Development :: Build Tools , ODB API , database",
  "License              :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programmin Language  :: C"             ,
  "Dependencies         :: ECMWF odb libs"
  "Operating System     :: OS dependent"]


[build-system]
requires      = ["setuptools>=68.0.0"]
build-backend =  "setuptools.build_meta"

[options]
zip_safe = False
#include_package_data = True
package_dir==.
packages         = pyodb_extra
python_requires  = >=3.8
install_requires =
             Cython  

[options.packages.find]
where   =pyodb,pyodb/modules 
include =include 

