[metadata]
name = pyodb
version = 1.1.0
author = Idir Dehmous
author_email = idehmous@meteo.be
description = C API interface to access ECMWF ODB1 databases from Python
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
keywords = ECMA, CCMA, ODB, Python
classifiers =
    Development Status :: 1 - release 
    Intended Audience  :: Developers
    Intended Audience  :: Science/Research
    Topic   :: Scientific/Engineering :: Atmospheric Science
    Topic   :: Database
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: C

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "numpy"]
build-backend = setuptools.build_meta



[options]
zip_safe = False
package_dir==.
packages         = pyodb_extra
python_requires  = >=3.8
install_requires =
             Cython  

[options.packages.find]
where   =. 
include =include 

